<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EightJokes</string>
    <string name="title_section_last_jokes">Last Jokes</string>
    <string name="title_section_best_jokes">Best Jokes</string>
    <string name="title_section_animals">Animals</string>
    <string name="title_section_black_humor">Black Humor</string>
    <string name="title_section_blondes">Blondes</string>
    <string name="title_section_chuck_norris">Chuck Norris</string>
    <string name="title_section_dark_people">Dark people</string>
    <string name="title_section_dirty">Dirty</string>
    <string name="title_section_facebook">Facebook</string>
    <string name="title_section_gays">Gays</string>
    <string name="title_section_it">IT</string>
    <string name="title_section_little_johny">Little Johny</string>
    <string name="title_section_men_women">Men / Women</string>
    <string name="title_section_sex">Sex</string>
    <string name="title_section_sport">Sport</string>
    <string name="title_section_yo_mama">Yo Mama</string>
    <string name="facebook_app_id">793948923975979</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_or_signup">LoginOrSignupActivity</string>
    <string name="not_now_label">Not now</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_content">Welcome to EightJokes</string>
    <string name="sub_welcome_content">We can make your day.</string>
    <string name="sing_up_button_label">Sign up</string>
    <string name="log_in_button_label">Log in</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_use_your_email_message">Or use your email</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="full_name_label">Full Name</string>
    <string name="sign_up_button_clicked_message">sign_up</string>
    <string name="log_in_button_clicked_message">log_in</string>
    <string name="required_filed_error_message">Field is required!</string>
    <string name="short_text_error_message">Entered text should be longer than 3 symbols</string>
    <string name="loading_login_message">Logging in...</string>
    <string name="loading_sign_up_message">Signing up...</string>
    <string name="loading_message">Wait for it...</string>
    <string name="static_comments_text">Comments</string>
    <string name="share_button_text">Share</string>
    <string name="up_button_text">Up</string>
    <string name="down_button_text">Down</string>
    <string name="comment_button_text">Comm</string>
    <string name="title_activity_comment">Comments</string>
    <string name="write_comment_hint">Write your Comment</string>
    <string name="post_button_text">Post</string>
    <string name="successfully_post_comment_message">Your comment was posted</string>
    <string name="empty_comment_message">You should write some comment</string>

</resources>
