<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neverland.eightjokes.login.WelcomeActivity">

    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome_content"
            android:textStyle="bold"
            android:id="@+id/welcomeTextView"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_above="@+id/subWelcomeTextView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sub_welcome_content"
            android:id="@+id/subWelcomeTextView"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subWelcomeTextView"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_20dp"
                android:text="@string/sing_up_button_label"
                android:id="@+id/signUpButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_button_label"
                android:id="@+id/logInButton"
                android:padding="@dimen/margin_20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/not_now_label"
            android:textColor="@android:color/black"
            android:id="@+id/notNowTextView"
            android:onClick="onNotNowClick"
            android:clickable="true"
            android:padding="@dimen/margin_10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
