<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:padding="@dimen/margin_10dp"
            android:id="@+id/jokeContentTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="137"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:id="@+id/numberOfCommentsTextView"
            android:layout_above="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/static_comments_text"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:id="@+id/staticCommentsTextView"
            android:layout_above="@+id/linearLayout2"
            android:layout_toRightOf="@+id/numberOfCommentsTextView"
            android:layout_toEndOf="@+id/numberOfCommentsTextView" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button_text"
            android:id="@+id/shareButton"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/shareButton"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout2">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/up_button_text"
                android:layout_weight="1"
                android:id="@+id/rateUpButton"
                android:layout_alignTop="@+id/rateDownButton"
                android:layout_toLeftOf="@+id/rateDownButton"
                android:layout_toStartOf="@+id/rateDownButton" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/down_button_text"
                android:layout_weight="1"
                android:id="@+id/rateDownButton"
                android:layout_alignBottom="@+id/shareButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>